--- a/RazorStand/Properties/launchSettings.json
+++ b/RazorStand/Properties/launchSettings.json
@@ -14,23 +14,13 @@
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5274",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:7296;http://localhost:5274",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "MailConfig__PartnerMail": "partner@fartsa.com",
+        "MailConfig__SupportMail": "help@fartsa.com",
+        "MailConfig__UsersRemovalServiceMail": "remove.me@fartsa.com",
+        "MailConfig__PublicMail": "hello@fartsa.com",
+        "MailConfig__LogoUrl": "https://media.fartca.dev/static/web/images/logo.png",
+        "MailConfig__ProjectName": "fartsa"
       }
     }
   }
